# project-template-rust

./: .pre-commit-config.yaml  Cargo.toml  Makefile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/myapp/: Cargo.toml
crates/mylib/: Cargo.toml
